--- a/index.html
+++ b/index.html
@@ -25,23 +25,10 @@
 
 <body>
 
-  <!-- Email Form -->
-  <form action="" method="get">
-    <div class="form-input">
-      <label for="email">Enter your email: </label>
-      <input type="email" name="email" id="email" value="Email">
-    </div>
-    <div class="form-button">
-      <input type="submit" value="Subscribe!">
-    </div>
-    <div class="form-message">
-      <p>This confirms the subscription for <span></span>.</p> 
-    </div>
-  </form>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
   <script src="js/app.js"></script>
 
 </body>
