--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Stories of Us</title>
+  <meta name="description" content="A look into the story of humans through the ages, immortals and gods alike.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -16,14 +16,48 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link rel="stylesheet" href="https://use.typekit.net/tgy1ile.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/app.css">
+
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+  <main>
+    <header>
+      <nav>
+        <svg xmlns="http://www.w3.org/2000/svg" width="54" height="50" viewBox="0 0 54 50">
+          <g id="Group_2" data-name="Group 2" transform="translate(-1658 -100.234)">
+            <rect id="Rectangle_1" data-name="Rectangle 1" width="54" height="12" transform="translate(1658 100.234)" fill="#434343"/>
+            <rect id="Rectangle_2" data-name="Rectangle 2" width="54" height="12" transform="translate(1658 119.234)" fill="#434343"/>
+            <rect id="Rectangle_3" data-name="Rectangle 3" width="54" height="12" transform="translate(1658 138.234)" fill="#434343"/>
+          </g>
+        </svg>
+      </nav>
+      <h1>Stories of Us</h1>
+    </header>
+
+    <section>
+      <p>these works come together to illustrate the way art depicts stories, Those of different eras and places. These pieces are stories of people. Some depict people in daily life, others depict transcendence and the immortal world of Gods. Stories of Us show the human tendency of immortalizing individuals through art, and how history plays its role in that.
+      </p>
+    </section>
+
+    <footer>
+      <p>Stories told in the real, depicted in the Imaginative this site is not affiliated with the RISD Museum</p>
+    </footer>
+  </main>
+  
+  <div>
+    <a href="#">
+     <img src='img/egypt-portrait-of-a-man-2.jpeg' alt=''> 
+   </a>
+  </div>
+  
+</body>
+
 
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
