--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <nav>
+   <header>
+      <div class="burger">
         <svg xmlns="http://www.w3.org/2000/svg" width="54" height="50" viewBox="0 0 54 50">
           <g id="Group_2" data-name="Group 2" transform="translate(-1658 -100.234)">
             <rect id="Rectangle_1" data-name="Rectangle 1" width="54" height="12" transform="translate(1658 100.234)" fill="#434343"/>
@@ -36,26 +35,48 @@
             <rect id="Rectangle_3" data-name="Rectangle 3" width="54" height="12" transform="translate(1658 138.234)" fill="#434343"/>
           </g>
         </svg>
-      </nav>
+      </div>
       <h1>Stories of Us</h1>
     </header>
-
+  <main class="titlepage">
     <section>
       <p>these works come together to illustrate the way art depicts stories, Those of different eras and places. These pieces are stories of people. Some depict people in daily life, others depict transcendence and the immortal world of Gods. Stories of Us show the human tendency of immortalizing individuals through art, and how history plays its role in that.
       </p>
     </section>
 
-    <footer>
-      <p>Stories told in the real, depicted in the Imaginative this site is not affiliated with the RISD Museum</p>
-    </footer>
   </main>
   
-  <div>
+  <div class="art">
     <a href="#">
-     <img src='img/egypt-portrait-of-a-man-2.jpeg' alt=''> 
+     <img class="egypt" src='img/egypt-portrait-of-a-man.jpeg' alt=''> 
    </a>
   </div>
   
+<div class="menu overlay fade hide">
+  <div class="content">
+    <nav>
+      <ul>
+        <li><a href="#"><img src='img/egypt-portrait-of-a-man.jpeg' alt='egypt portrait'></a></li>
+        <li><a href="#"><img src='img/contemporary-nancy-selvage.jpeg' alt='nancy selvage'></a></li>
+        <li><a href="#"><img src='img/defying-the-shadow.jpeg' alt='defying the shadoW'></a></li>
+        <li><a href="#"><img src='img/alexander-taming-bucephalus.jpeg' alt='alexander the great'></a></li>
+        <li><a href="#"><img src='img/european-chabaud-latour-and-his-family.jpeg' alt='ecl and family'></a></li>
+        <li><a href="#"><img src='img/hercules-capturing-cerberus.jpeg' alt='hercules'></a></li>
+        <li><a href="#"><img src='img/haiti-the-eternal-presence.jpeg' alt='haiti'></a></li>
+        <li><a href="#"><img src='img/india-shiva-nataraja.jpeg' alt='india'></a></li>
+        <li><a href="#"><img src='img/japan-head-of-bodhisattva-ksitigarbha.jpeg' alt='japan'></a></li>
+        <li><a href="#"><img src='img/agrippina-the-younger.jpeg' alt='roman'></a></li>
+        <li><a href="#"><img src='img/sojouner-truth.jpeg' alt='sojouner'></a></li>
+      <ul>
+    </nav>
+  </div>
+</div>
+
+
+ <footer>
+      <p>Stories told in the real, depicted in the Imaginative this site is not affiliated with the RISD Museum</p>
+    </footer>
+
 </body>
 
 
